# audio-book

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: pr-check-fixer.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-review.yml  ci.yml
docs/: DESIGN.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/agents/: index.md  pr-check-fixer.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: audiobook-generation.md  index.md
docs/references/: elevenlabs-reference.md
src/audiobook/: __init__.py
src/audiobook/adapters/: __init__.py
src/audiobook/cli/: __init__.py  main.py  main_test.py
src/audiobook/config/: __init__.py
src/audiobook/domain/: __init__.py
src/audiobook/services/: __init__.py
src/audiobook/types/: __init__.py
tests/: __init__.py
