[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "structlog>=24.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "build>=1.2",
]

[project.scripts]
audiobook = "audiobook.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle (enforces module docstrings)
    "T20",  # flake8-print (no bare print())
    "S",    # flake8-bandit (security)
    "TID",  # flake8-tidy-imports (layer enforcement)
]
ignore = [
    "D100", # Missing docstring in public module — we enforce at module level via D104
    "D101", # Missing docstring in public class — covered by our review process
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "S101", # Use of assert — allowed in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Both co-located unit tests (*_test.py) and integration tests (tests/)
"**/*_test.py" = [
    "S",    # bandit — tests can use assert, etc.
    "D",    # pydocstyle — tests don't need full docstrings
    "T20",  # print() allowed in tests
]
"tests/**/*.py" = [
    "S",
    "D",
    "T20",
]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Co-located unit test files (*_test.py) inside the package
module = "audiobook.*_test"
disallow_untyped_defs = false

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# Discover tests in both co-located unit tests (src/) and integration tests (tests/)
testpaths = ["src", "tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# importlib mode avoids import conflicts when test files live inside packages
addopts = [
    "--import-mode=importlib",
    "--cov=src/audiobook",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/audiobook"]
omit = [
    "src/audiobook/cli/*",       # CLI is integration-tested, not unit-tested
    "src/audiobook/**/*_test.py", # exclude the test files themselves from coverage
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
